2010-01-06 WANG Lu <coolwanglu(a)gmail.com>
    * Fixed detection of reverse change, but it's now working partially, see
	  comments in `help option`
	* MATCHANY can be used to filter out types now

2010-01-03 WANG Lu <coolwanglu(a)gmail.com>
    * better GUI
	* support scanning for a speicific type of data
	* autotools-ized gui
	* added an option to determine which regions to be searched

2009-12-20 WANG Lu <coolwanglu(a)gmail.com>
	* basic float/double support
	* fixed a peek buffer bug, that the buffer is not shifted correctly
    * change format of some commands for the front-end
	* added a new 'write' command
	* fixed a data overwritten issue (Issue 1)

xxxx-xx-xx Tavis Ormandy <taviso@sdf.lonestar.org>
    * fixed infinite loop if a command was just leading whitespace.
    * add message to configure script about `libreadline-dev` package.
    * correct some typos reported by debian.

2007-06-07 Tavis Ormandy <taviso@sdf.lonestar.org>
    * make license clearer, added gpl notice to all source files, and added a show command.
        - eg, show copying, show warranty, etc.
    * handle unspecified value in set properly, eg set /4
    * autotooled the build process.
    * fixed bug where unaligned variables might be missed at end of region.
    * begin testsuite using dejagnu, to help prevent any regressions in future.
    * use /proc/pid/mem if available.

2007-04-08 Tavis Ormandy <taviso@sdf.lonestar.org>
    * corrected lots of lint errors.
    * include copy of GPL in COPYING file.
    * use more EXPECT().
    * fixed two memory leaks (very small).
    * much more scalable commandline parsing, simple switch/case was getting too unwieldy.
    * deprecated cont command, and re-wrote set to make it much more powerful.
        - use set x/y instead of cont, cont will print a warning if you try to use it.
    * preliminary support for float type (WARNING: experimental)